feat(K-004): terrraform infra

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,17 @@ Thumbs.db
 # Local folders
 challenge/
 md-galore/
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+terraform.tfvars
+*.tfvars.json
+crash.log
+crash.*.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
