--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -8,14 +8,14 @@ resources:
   - ../../base
 
 # Image replacements - these override the placeholder images in base deployments
-# IMPORTANT: Replace YOUR-AWS-ACCOUNT-ID with your actual AWS account ID before deploying
-# You can find your account ID with: aws sts get-caller-identity --query Account --output text
+# AWS Account ID and Region are dynamically replaced from Parameter Store
+# Use scripts/update-kustomization-from-parameter-store.sh to update this file
 images:
   - name: auxiliary-service
-    newName: YOUR-AWS-ACCOUNT-ID.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-auxiliary-service
+    newName: 575907498612.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-auxiliary-service
     newTag: latest
   - name: main-api
-    newName: YOUR-AWS-ACCOUNT-ID.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-main-api
+    newName: 575907498612.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-main-api
     newTag: latest
 
 # Note: We don't use commonLabels here because it would modify
