feat(K-006): ARGO setup

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ Thumbs.db
 # Local folders
 challenge/
 md-galore/
+/scripts/update-kustomization-from-parameter-store.sh
 
 # Terraform
 *.tfstate
