fix(K-007): fix get single parameter by name

--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -13,10 +13,10 @@ resources:
 # IMPORTANT: Keep placeholders in Git - CI/CD will replace them before deployment
 images:
   - name: auxiliary-service
-    newName: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/k-challenge-dev-auxiliary-service
+    newName: 575907498612.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-auxiliary-service
     newTag: latest
   - name: main-api
-    newName: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/k-challenge-dev-main-api
+    newName: 575907498612.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-main-api
     newTag: latest
 
 # Note: We don't use commonLabels here because it would modify
