--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -8,15 +8,15 @@ resources:
   - ../../base
 
 # Image replacements - these override the placeholder images in base deployments
-# AWS Account ID and Region are dynamically replaced from Parameter Store
-# Use scripts/update-kustomization-from-parameter-store.sh to update this file
-# IMPORTANT: Keep placeholders in Git - CI/CD will replace them before deployment
+# AWS Account ID and Region are dynamically replaced at deployment time
+# IMPORTANT: Keep placeholders in Git - deployment scripts will replace them temporarily
+# Argo CD Image Updater will update image tags automatically
 images:
   - name: auxiliary-service
-    newName: 575907498612.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-auxiliary-service
+    newName: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/k-challenge-dev-auxiliary-service
     newTag: latest
   - name: main-api
-    newName: 575907498612.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-main-api
+    newName: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/k-challenge-dev-main-api
     newTag: latest
 
 # Note: We don't use commonLabels here because it would modify
