--- a/kubernetes/base/main-api/main-api-deployment.yaml
+++ b/kubernetes/base/main-api/main-api-deployment.yaml
@@ -8,13 +8,16 @@ metadata:
     environment: dev
   annotations:
     # Argo CD Image Updater: Automatically updates image tags from ECR
-    # Reads registry from kustomization.yaml (no account ID hardcoded here)
-    argocd-image-updater.argoproj.io/image-list: main-api=ECR_REGISTRY/k-challenge-dev-main-api
+    # Registry URL is populated from Parameter Store via update script
+    # Format: image-name=registry/repository
+    # This placeholder will be replaced by scripts/update-image-updater-annotations.sh
+    argocd-image-updater.argoproj.io/image-list: main-api=${ECR_REGISTRY}/k-challenge-dev-main-api
     argocd-image-updater.argoproj.io/write-back-method: git
     argocd-image-updater.argoproj.io/git-branch: main
     argocd-image-updater.argoproj.io/kustomize-image-update: "true"
     argocd-image-updater.argoproj.io/kustomize-path: kubernetes/overlays/dev
     argocd-image-updater.argoproj.io/update-strategy: latest
+    argocd-image-updater.argoproj.io/write-back-target: kustomization
 spec:
   replicas: 2
   selector:
