--- a/.github/workflows/inject-registry-url.yml
+++ b/.github/workflows/inject-registry-url.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0  # Fetch full history to detect changes properly
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
