--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+    paths:
+      # Only trigger when application code changes, not infrastructure/config
+      - "services/**/*"
+      - ".dockerignore"
+      - "Dockerfile*"
+      - "**/Dockerfile*"
   workflow_dispatch: # Allow manual trigger
 
 env:
@@ -35,16 +41,16 @@ jobs:
           # Get AWS Account ID directly from AWS CLI (no Parameter Store needed)
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           AWS_REGION=${AWS_REGION:-us-east-1}
-          
+
           # Build ECR repository URLs
           AUXILIARY_URL="${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/k-challenge-dev-auxiliary-service"
           MAIN_API_URL="${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/k-challenge-dev-main-api"
-          
+
           echo "account_id=$ACCOUNT_ID" >> $GITHUB_OUTPUT
           echo "aws_region=$AWS_REGION" >> $GITHUB_OUTPUT
           echo "auxiliary_url=$AUXILIARY_URL" >> $GITHUB_OUTPUT
           echo "main_api_url=$MAIN_API_URL" >> $GITHUB_OUTPUT
-          
+
           echo "AWS Account ID: $ACCOUNT_ID"
           echo "AWS Region: $AWS_REGION"
           echo "Auxiliary Service ECR: $AUXILIARY_URL"
