--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -8,29 +8,18 @@ resources:
   - ../../base
 
 # Image replacements - these override the placeholder images in base deployments
-# AWS Account ID and Region are dynamically replaced at deployment time
-# IMPORTANT: Keep placeholders in Git - deployment scripts will replace them temporarily
-# Argo CD Image Updater will update image tags automatically
+# Account ID and region are hardcoded here (not secrets, just identifiers)
 images:
   - name: auxiliary-service
-    newName: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/k-challenge-dev-auxiliary-service
+    newName: 575907498612.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-auxiliary-service
     newTag: latest
   - name: main-api
-    newName: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/k-challenge-dev-main-api
+    newName: 575907498612.dkr.ecr.us-east-1.amazonaws.com/k-challenge-dev-main-api
     newTag: latest
-
-# NOTE: The ${ECR_REGISTRY} placeholders in deployment annotations are replaced
-# by GitHub Actions workflow (.github/workflows/inject-registry-url.yml) which
-# reads from Parameter Store and commits the values. This ensures Image Updater
-# can read the registry URL from Git while keeping placeholders in source code.
-
 # Note: We don't use commonLabels here because it would modify
 # Deployment selectors (which are immutable). Labels are defined
 # directly in the deployment files.
 #
-# IMPORTANT: 
-# - Deployment annotations use ${ECR_REGISTRY} placeholder (no hardcoded values in Git)
-# - Kustomize replacements inject values from External Secrets Operator Secret at build time
-# - External Secrets Operator syncs from AWS Parameter Store using IRSA
-# - This ensures secure, dynamic registry URLs without hardcoding account IDs
+# Image tags are updated by GitHub Actions workflow after building new images.
+# Argo CD auto-syncs when Git changes.
 
